package Commandes;

public interface Reversible {
    void undo();
    void redo();
}
